# teiko-technical

./: .gitignore  Makefile  README.md  analyze_data.py  cell_counts.db  dashboard.py  exploration.ipynb  load_data.py  pyproject.toml
outputs/part_3/: t_test_results.csv
outputs/part_4/: samples_per_project.csv  sex_and_response.csv
